# XenoBuddy-Pi.AI

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-tests.yml
configs/: servos.seven_servo_tripod.yaml
docs/: hardware.md  safety.md  voice_pipeline.md
gestures/: celebrate.yaml  confused.yaml  explain.yaml  fist_bump.yaml  idle.yaml  wave.yaml
tests/: test_core.py
xenobuddy/: cli.py  core.py
